--- a/ind.html
+++ b/ind.html
@@ -12,6 +12,7 @@
     </nav>
     <a href="#">link</a>
     <h1>tag h1</h1>
-    <h2>thag h2</>
+    <h2>thag h2</h2>
+    <link>hhhh</link>
 </body>
 </html>
